feat(backend): add human authentication
